--- a/BlazorApp1/Components/Layout/NavMenu.razor
+++ b/BlazorApp1/Components/Layout/NavMenu.razor
@@ -19,7 +19,9 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
-
+        <NavLink class="nav-link" href="fruits">
+            <span class="obi bi-list-nested-nav-menu" aria-hidden="true"></span> Fruits
+        </NavLink>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
