--- a/BlazorApp1/Components/Pages/Fruits.razor
+++ b/BlazorApp1/Components/Pages/Fruits.razor
@@ -1,10 +1,12 @@
 ﻿@page "/fruits"
 @using BlazorApp1.Models
-@inject FruitList FruitService
+@inject FruitService FruitService
 
 <PageTitle>Fruits</PageTitle>
 
 <h1>List of Fruits</h1>
+
+
 
 @if (fruits == null)
 {
@@ -33,8 +35,14 @@ else
     </table>
 }
 
+
 @code {
-    private List<FruitList> fruits;
+    private List<Fruit> fruits;
+
+    public Fruits(List<Fruit> fruits)
+    {
+        this.fruits = fruits;
+    }
 
     protected override async Task OnInitializedAsync()
     {
